--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -28,12 +28,14 @@
   position: absolute;
   top: calc(env(safe-area-inset-top) + 100rpx);
   left: 30rpx;
-  background-color: rgba(255, 255, 255, 0.9);
-  color: #333;
-  font-size: 24rpx;
-  padding: 8rpx 24rpx;
+  background-color: rgba(255, 255, 255, 0.0);
   border-radius: 30rpx;
-  font-weight: 500;
+}
+
+.platform-logo {
+  width: 130rpx;
+  height: 60rpx;
+  display: block;
 }
 
 .slogan-container {
