--- a/pages/profile/cooperation/cooperation.wxml
+++ b/pages/profile/cooperation/cooperation.wxml
@@ -2,14 +2,14 @@
   <view class="card menu-card">
     <view class="menu-item" bindtap="applyMerchant">
       <view class="menu-left">
-        <text class="menu-icon">🏪</text>
+        <image class="menu-icon-img" src="{{iconWssj}}" mode="aspectFit"></image>
         <text class="menu-name">我是商家</text>
       </view>
       <text class="menu-arrow">›</text>
     </view>
     <view class="menu-item" bindtap="navigateTo" data-url="/pages/alumni-association/create/create">
       <view class="menu-left">
-        <text class="menu-icon">🏛️</text>
+        <image class="menu-icon-img" src="{{iconSqxyh}}" mode="aspectFit"></image>
         <text class="menu-name">申请校友会</text>
       </view>
       <text class="menu-arrow">›</text>
