--- a/pages/profile/cooperation/cooperation.wxml
+++ b/pages/profile/cooperation/cooperation.wxml
@@ -3,7 +3,7 @@
     <view class="menu-item" bindtap="applyMerchant">
       <view class="menu-left">
         <image class="menu-icon-img" src="{{iconWssj}}" mode="aspectFit"></image>
-        <text class="menu-name">我是商家</text>
+        <text class="menu-name">我是商户</text>
       </view>
       <text class="menu-arrow">›</text>
     </view>
