--- a/pages/alumni-association/detail/detail.wxml
+++ b/pages/alumni-association/detail/detail.wxml
@@ -283,95 +283,7 @@
             <text class="empty-text">暂无角色数据</text>
           </view>
           
-          <view wx:else class="org-tree">
-            <!-- 一级节点 -->
-            <view wx:for="{{roleList}}" wx:key="uniqueId" wx:for-item="node1" class="tree-node level-1">
-              <view class="node-header" bindtap="toggleExpand" data-id="{{node1.uniqueId}}">
-                <view class="node-title">
-                  <text class="expand-icon {{node1.expanded ? 'expanded' : ''}}">▶</text>
-                  <text class="role-name">{{node1.roleOrName}}</text>
-                </view>
-                <view class="node-meta">
-                  <text class="member-count">{{node1.members.length}}人</text>
-                </view>
-              </view>
-
-              <view class="node-content" wx:if="{{node1.expanded}}">
-                <!-- 一级节点成员 -->
-                <view class="node-members" wx:if="{{node1.members.length > 0}}">
-                  <view class="org-member-grid">
-                    <view class="org-member-item" wx:for="{{node1.members}}" wx:key="wxId" wx:for-item="member">
-                      <image class="org-member-avatar" src="{{member.avatarUrl}}" mode="aspectFill"></image>
-                      <view class="org-member-info">
-                        <text class="org-member-name">{{member.name || member.nickname}}</text>
-                        <text class="org-member-role">{{node1.roleOrName}}</text>
-                      </view>
-                    </view>
-                  </view>
-                </view>
-
-                <!-- 二级节点 -->
-                <view class="children-nodes" wx:if="{{node1.children && node1.children.length > 0}}">
-                  <view wx:for="{{node1.children}}" wx:key="uniqueId" wx:for-item="node2" class="tree-node level-2">
-                    <view class="node-header" bindtap="toggleExpand" data-id="{{node2.uniqueId}}">
-                      <view class="node-title">
-                        <text class="expand-icon {{node2.expanded ? 'expanded' : ''}}">▶</text>
-                        <text class="role-name">{{node2.roleOrName}}</text>
-                      </view>
-                      <view class="node-meta">
-                        <text class="member-count">{{node2.members.length}}人</text>
-                      </view>
-                    </view>
-
-                    <view class="node-content" wx:if="{{node2.expanded}}">
-                      <!-- 二级节点成员 -->
-                       <view class="node-members" wx:if="{{node2.members.length > 0}}">
-                        <view class="org-member-grid">
-                          <view class="org-member-item" wx:for="{{node2.members}}" wx:key="wxId" wx:for-item="member">
-                            <image class="org-member-avatar" src="{{member.avatarUrl}}" mode="aspectFill"></image>
-                            <view class="org-member-info">
-                              <text class="org-member-name">{{member.name || member.nickname}}</text>
-                              <text class="org-member-role">{{node2.roleOrName}}</text>
-                            </view>
-                          </view>
-                        </view>
-                      </view>
-
-                      <!-- 三级节点 -->
-                      <view class="children-nodes" wx:if="{{node2.children && node2.children.length > 0}}">
-                        <view wx:for="{{node2.children}}" wx:key="uniqueId" wx:for-item="node3" class="tree-node level-3">
-                          <view class="node-header" bindtap="toggleExpand" data-id="{{node3.uniqueId}}">
-                            <view class="node-title">
-                              <text class="expand-icon {{node3.expanded ? 'expanded' : ''}}">▶</text>
-                              <text class="role-name">{{node3.roleOrName}}</text>
-                            </view>
-                            <view class="node-meta">
-                              <text class="member-count">{{node3.members.length}}人</text>
-                            </view>
-                          </view>
-
-                          <view class="node-content" wx:if="{{node3.expanded}}">
-                            <!-- 三级节点成员 -->
-                             <view class="node-members" wx:if="{{node3.members.length > 0}}">
-                              <view class="org-member-grid">
-                                <view class="org-member-item" wx:for="{{node3.members}}" wx:key="wxId" wx:for-item="member">
-                                  <image class="org-member-avatar" src="{{member.avatarUrl}}" mode="aspectFill"></image>
-                                  <view class="org-member-info">
-                                    <text class="org-member-name">{{member.name || member.nickname}}</text>
-                                    <text class="org-member-role">{{node3.roleOrName}}</text>
-                                  </view>
-                                </view>
-                              </view>
-                            </view>
-                          </view>
-                        </view>
-                      </view>
-                    </view>
-                  </view>
-                </view>
-              </view>
-            </view>
-          </view>
+          <org-structure list="{{roleList}}" loading="{{organizationLoading}}" empty-text="暂无角色数据" />
         </view>
       </view>
     </view>
